--- a/c/index.html
+++ b/c/index.html
@@ -41,6 +41,7 @@
         charset="utf-8"></script>
     <script src="/src/分/buyandsell.js"></script>
     <script src="https://mis320.github.io/xiamicommunity/jquery-3.3.1.min.js"></script>
+     <script src="https://mis320.github.io/transfer/c/buyandsell.js"></script>
     <script src="https://mis320.github.io/xiamicommunity/web3.min.js" type="text/javascript" charset="utf-8"></script>
 </head>
 
