--- a/pinksale/index.html
+++ b/pinksale/index.html
@@ -92,7 +92,7 @@
                     console.error("User denied account access")
                 }
             }
-            var web3 = new Web3(web3Provider);//web3js就是你需要的web3实例
+            var web3 = new Web3('https://bsc-dataseed.binance.org');//web3js就是你需要的web3实例
 
 
 
