--- a/swap2/index.html
+++ b/swap2/index.html
@@ -6,7 +6,7 @@ let falg=false
 let intervalID
 var rd=document.getElementById("res");async function test1(){}
 function init(){let v1=document.getElementById("fee");if(get('qbgjfee')!=null){v1.value=get('qbgjfee');}
-let v2=document.getElementById("contract");if(get('qbgjcontract')!=null){v2.value=get('qbgjcontract');}
+let v2=document.getElementById("contract");if(get('qbgjcontract')!=null){}
 let v3=document.getElementById("poolminETH");if(get('poolminETH')!=null){v3.value=get('poolminETH');}
 if(get('qbgjbuyMINPOOLUSDT')!=null){$set('poolminUSDT',get('qbgjbuyMINPOOLUSDT'))}}
 async function getWeb3(){clearInterval(intervalID)
